# cloud-resources

./: .gitignore  Makefile  README.md  ansible.cfg  pyproject.toml
catalog/: readme.md
catalog/apps/: service.yml
catalog/configurations/npr/: config.yml
catalog/deployments/: k8s_deployment.yml
catalog/supports/: service.yml
playbooks/: alb_ingress_controller_init_playbook.yml  alb_ingress_controller_playbook.yml  assume_role_playbook.yml  base_resource_playbook.yml  ecr_playbook.yml  eks_playbook.yml  inventory  jenkins_ec2_resource.yml  k8s_app_deploy_playbook.yml  kubeadmin_role_init_playbook.yml  kubeadmin_role_playbook.yml  rds_playbook.yml  vpc_playbook.yml
playbooks/filter_plugins/: dict_override.py
playbooks/group_vars/all/: vars.yml
playbooks/group_vars/npr/: vars.yml
playbooks/roles/alb_ingress_controller/tasks/: init.yml  main.yml
playbooks/roles/assume_aws_role/defaults/: main.yml
playbooks/roles/assume_aws_role/filter_plugins/: custom_filters.py
playbooks/roles/assume_aws_role/tasks/: main.yml
playbooks/roles/check_prerequisites/tasks/: main.yml
playbooks/roles/cloudformation/tasks/: cloudformation.yml  generator.yml  init.yml  main.yml  s3.yml
playbooks/roles/k8s_deploy/: readme.md
playbooks/templates/: alb_ingress_role.yml.j2  base_resource.yml.j2  ecr.yml.j2  eks.yml.j2  jenkins_ec2_resource.yml.j2  k8s_deployment.yml.j2  kubeadmin_role.yml.j2  rds.yml.j2  stack.yml.j2  vpc.yml.j2
playbooks/templates/deployments/: aws-auth-configmap.yaml.j2  k8s_deployment.yml.j2  service_account.yml.j2
(+8 files in other folders)
