[tool.poetry]
name = "cloud-resources"
version = "0.1.0"
description = ""
authors = ["tuankiet1709 <tranhatuankiet1709@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_resources"}]

[tool.poetry.dependencies]
python = "^3.10"
botocore = "^1.34.54"
boto3 = "^1.34.54"
awscli = "^1.32.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
